changes for renaming javax to jakarta in JAXB TCK.

--- a/jaxb-tck/tests/api/javax_xml/bind/JAXBContext/jaxb.properties.rc
+++ b/jaxb-tck/tests/api/javax_xml/bind/JAXBContext/jaxb.properties.rc
@@ -14,4 +14,4 @@
 # SPDX-License-Identifier: EPL-2.0 OR GPL-2.0 WITH Classpath-exception-2.0
 #
 
-javax.xml.bind.context.factory=javasoft.sqe.tests.api.javax.xml.bind.JAXBContext.ContextFactory
+jakarta.xml.bind.context.factory=javasoft.sqe.tests.api.jakarta.xml.bind.JAXBContext.ContextFactory
